# ESP32-S3-Gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  partitions.csv
.github/workflows/: release_firmware.yml
components/aht20/: CMakeLists.txt  Kconfig.projbuild.example  aht20.c  aht20.h
components/common/: CMakeLists.txt  app_types.h
components/logs/: CMakeLists.txt  data_logger.c  data_logger.h
components/mqtt_huawei/: CMakeLists.txt  Kconfig.projbuild.example  mqtt_huawei.c  mqtt_huawei.h
components/network/: CMakeLists.txt  Kconfig.projbuild.example
components/network/mqtt_huawei/: mqtt_huawei.c  mqtt_huawei.h
components/network/wifi/: lan_service.c  lan_service.h  wifi_station.c  wifi_station.h
components/sa_hal/: CMakeLists.txt  Kconfig.projbuild.example
components/sa_hal/bus/: sa_bus_i2c.c  sa_bus_i2c.h  sa_device_manager.c  sa_device_manager.h  sa_hal.h
components/sa_hal/mock/: sa_mock_device.c  sa_mock_device.h
components/sa_hal/node/aht20/: sa_node_aht20.c  sa_node_aht20.h
components/sa_hal/node/beep/: sa_node_beep.c  sa_node_beep.h
components/sa_hal/node/ssd1306/: sa_node_oled.c  sa_node_oled.h
components/ssd1306/: CMakeLists.txt  ssd1306_i2c_new.c
components/state_machine/: CMakeLists.txt  Kconfig.projbuild.example  hw_recovery.c  hw_recovery.h  settings.c  settings.h  smart_scene_engine.c  smart_scene_engine.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild.example  lan_service.c  lan_service.h  wifi_station.c
main/: CMakeLists.txt  Kconfig.projbuild.example  main.c
